# memguard_Riffnal

./: .gitignore  README.md  demo_memguard.py  pyproject.toml
demo_live/: chat_helpdesk.py  chat_helpdesk_guarded.py  demo_presenter.py  helpdesk_agent.py  helpdesk_guarded.py  setup_db.py
demo_live/attack_vectors/: atk1_subtle_policy.sql  atk2_cmdb_tamper.sql  atk3_ticket_inject.sql  atk4_software_url.sql  atk5_memory_hijack.sql
memguard/: LICENSE  __init__.py  config.py
memguard/adapters/: __init__.py  generic.py  langchain.py  secure_tool.py
memguard/core/: __init__.py  agent_registry.py  audit.py  memory_entry.py  memory_proxy.py  memory_store.py  policy_engine.py  quarantine.py  tenant_manager.py
memguard/crypto/: __init__.py  agent_identity.py  attestation.py  hash_chain.py  signing.py
memguard/detection/: __init__.py  base.py  contradiction.py  cross_key_consistency.py  fragment_assembly.py  latent_attack.py  lesson_memory.py  pipeline.py  privilege_escalation.py  semantic_drift.py  semantic_fingerprint.py
memguard/graph/: __init__.py  memory_graph.py
